[package]
name = "sound_rs"
version = "0.1.4"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sound_rs"
crate-type = ["cdylib"]

[dependencies]
cpal = "0.15"
pyo3 = { version = "0.25.0", features = ["extension-module"] }
numpy = { version = "0.25.0", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
symphonia = { version = "0.5", features = ["mp3", "flac", "vorbis", "aac", "isomp4", "wav"] }

[features]
default = ["numpy", "async"]
numpy = ["dep:numpy"]
async = ["dep:tokio"]
