[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"



[project]
name = "sound_rs"
description = "Fast Rust-powered audio playback library for Python"
requires-python = ">=3.7"
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
urls = { "Homepage" = "https://github.com/Neksand/sound_rs", "Repository" = "https://github.com/Neksand/sound_rs", "Issues" = "https://github.com/Neksand/sound_rs/issues" }
[tool.maturin]
features = ["pyo3/extension-module"]
